package bangunDatar;
import bangun.*;
public abstract class BangunRuang implements Bangun {
    public abstract void hitungVolume();
    public abstract void hitungLuasPermukaan();
}
