@startuml

' Abstract Classes
abstract class BangunRuang {
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

abstract class BangunDatar {
    +hitungLuas(): double
    +hitungKeliling(): double
}

' Bangun Datar Classes
class Persegi {
    -sisi: double
    +hitungLuas(): double
    +hitungKeliling(): double
}

class PersegiPanjang {
    -panjang: double
    -lebar: double
    +hitungLuas(): double
    +hitungKeliling(): double
}

class Lingkaran {
    -jari: double
    +hitungLuas(): double
    +hitungKeliling(): double
}

class Segitiga {
    -alas: double
    -tinggi: double
    -sisiA: double
    -sisiB: double
    +hitungLuas(): double
    +hitungKeliling(): double
}

' Bangun Ruang Classes
class Balok {
    -alas: PersegiPanjang
    -tinggi: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class Bola {
    -lingkaran: Lingkaran
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class JuringBola {
    -lingkaran: Lingkaran
    -sudut: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class Kerucut {
    -lingkaran: Lingkaran
    -tinggi: double
    -sisiMiring: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class KerucutTerpancung {
    -lingkaran1: Lingkaran
    -lingkaran2: Lingkaran
    -tinggi: double
    -sisiMiring: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class Kubus {
    -persegi: Persegi
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class LimasSegiempat {
    -alasLimas: Persegi
    -alas: Segitiga
    -tinggi: Segitiga
    -tinggiLimas: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class LimasSegitiga {
    -alas: Segitiga
    -tinggiLimas: double
    -tinggiSisi: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class PrismaSegiEmpat {
    -alas: BangunDatar
    -tinggi: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class PrismaSegiTiga {
    -alas: Segitiga
    -tinggiPrisma: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class Tabung {
    -lingkaran: Lingkaran
    -tinggi: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

class TemberengBola {
    -jari: double
    -tinggi: double
    +hitungVolume(): double
    +hitungLuasPermukaan(): double
}

' Inheritance
BangunRuang <|-- Balok
BangunRuang <|-- Bola
BangunRuang <|-- JuringBola
BangunRuang <|-- Kerucut
BangunRuang <|-- KerucutTerpancung
BangunRuang <|-- Kubus
BangunRuang <|-- LimasSegiempat
BangunRuang <|-- LimasSegitiga
BangunRuang <|-- PrismaSegiEmpat
BangunRuang <|-- PrismaSegiTiga
BangunRuang <|-- Tabung
BangunRuang <|-- TemberengBola

BangunDatar <|-- Persegi
BangunDatar <|-- PersegiPanjang
BangunDatar <|-- Lingkaran
BangunDatar <|-- Segitiga

' Composition / Aggregation
Balok --> PersegiPanjang
Bola --> Lingkaran
JuringBola --> Lingkaran
Kerucut --> Lingkaran
KerucutTerpancung --> Lingkaran
Kubus --> Persegi
LimasSegiempat --> Persegi
LimasSegiempat --> Segitiga
LimasSegitiga --> Segitiga
PrismaSegiEmpat --> BangunDatar
PrismaSegiTiga --> Segitiga
Tabung --> Lingkaran
TemberengBola --> Lingkaran

@enduml
